gcc/testsuite/rust/rustc/ui/if-attrs/stmt-expr-gated.rs
fn main() {
    let _ = #[deny(warnings)] if true { // { dg-error ".E0658." "" { target *-*-* } }
    } else if false {
    } else {
    };
}

